infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
# apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: task-manager.dev
      http:
        paths:
          - path: /users/?(.*)
            backend:
              serviceName: tm-server-srv
              servicePort: 5000
          - path: /tasks/?(.*)
            backend:
              serviceName: tm-server-srv
              servicePort: 5000
          - path: /?(.*) # catch all at last
            backend:
              serviceName: tm-client-srv
              servicePort: 3000
